k8s/app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: diplom-devops-app-service
spec:
  selector:
    app: app
  ports:
  - name: app-http
    protocol: TCP
    port: 80
    nodePort: 31080
    targetPort: 80
  type: NodePort
