k8s/grafana-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - name: grafana-http
      protocol: TCP
      port: 3000
      nodePort: 31000
      targetPort: 3000
  type: NodePort
