k8s/app-networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: diplom-devops-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: app
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 80
      protocol: TCP
  policyTypes:
  - Ingress
